       ============================================
 Developed and maintained by Matthias Ettrich (ettrich@kde.org)


kwm (since 0.10) was almost rewritten from scratch in C++.  Many ideas
and some code went in from David Hogan's 9wm, a smart and small
windowmanager written in plain C. There are of course also strong
influences from my experiences with the former kwm.


In 0.10:
--------
  patchlevel 3:
       - session management can handle even crappy missbehaving clients
         like xfig, which destroy their window instead of saving theirselfs.
         kwm even enables the proxy (if possible) for those lying programs.
         (Please do not look at the hacks necessary to support this rubbish)
       - no more flickering with opaque move and FocusFollowMouse
       - Alt-Tab works now even with FocusFollowMouse
       - Alt-Tab/Control-Tab can be aborted with Escape (Thanks to Christian
         for this idea)
       - re-enabled MWM decoration hints for StarOffice (floatwinshells)
       - kwm_desktop_change contains new desktop as argument
       - unknown commands are sent to the modules as described in kwm.h
       - session management now possible for unmapped windows (usefull
         for example for kfm). Please see kwm.h for details.

  patchlevel 2:
       - fixed the frames-are-dissappearing-and-qt-focus-not-working
         bug I introduced in patchlevel 1 :-(
       - tiny fixes / improvements for KWMModuleApplication

  patchlevel 1:
       - "-version" command line argument
       - Alt-MMB fixed
       - bugfix in module registration 
       - bugfix in X error handling during initialization


Some changes beside the rewrite since previous kwms:

 - well documentated libkwm allows clients to communicate with the
   windowmanager in an easy way (will go into libkdecore as kwm.h) 
 - more complete README including a mini-FAQ
 - does not select button events from the root window.
   Rootwindow handling will be done by krootwin.