@@ -1,1 +1,1 @@
-#define KWM_VERSION "kwm 0.10 patchlevel 3"
+#define KWM_VERSION "kwm 0.10 patchlevel 4"
